cabal-version:       2.2
name:                hsgb
version:             0.1.0.0
homepage:            https://github.com/jfearnley/hsgb#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              John Fearnley
maintainer:          john.fearnley@liverpool.ac.uk
copyright:           2022 John Fearnley
category:            Web
build-type:          Simple
extra-source-files:  README.md

common deps
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -O2 
                       -Wall
                       -Wno-missing-signatures 
                       -Wno-name-shadowing
                       -Wno-orphans
                       -Wno-unused-imports
  default-extensions:  Strict
                       OverloadedStrings
                       FlexibleContexts
                       MultiWayIf
                       BlockArguments
                       DeriveGeneric
                       GADTs
                       BinaryLiterals
                       FlexibleInstances
                       DerivingVia
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       lens,
                       containers,
                       vector,
                       split,
                       sdl2,
                       text,
                       monad-loops,
                       bytestring,
                       template-haskell,
                       directory,
                       ilist,
                       dlist,
                       pretty-terminal,
                       hashable,
                       repline,
                       filepath,
                       bimap,
                       hashtables,
                       primitive,
                       generic-monoid,
                       store,
                       ListLike
  other-modules:       Cpu, 
                       CpuBasic, 
                       Decoder, 
                       Emulation,
                       Frontend, 
                       GB, 
                       Gpu, 
                       IO,
                       Interrupts, 
                       Memory, 
                       Timer, 
                       Debugger,
                       Disassembler,
                       Types, 
                       Util,
                       Sound

executable hsgb
  import:              deps
  main-is:             Main.hs

executable debug
  import:              deps
  main-is:             DebuggerMain.hs

Test-Suite tests
  import:              deps
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       filepath,
